--- a/Project 1/css/style.css
+++ b/Project 1/css/style.css
@@ -26,6 +26,18 @@ body{
     border-radius: 24px;
     padding: 25px;
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+    position: relative;
+}
+
+.profile-card::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 36%;
+    width: 100%;
+    border-radius: 24px 24px 0 0;
+    background-color: blue;
 }
 
 .image{
@@ -33,6 +45,7 @@ body{
     height: 150px;
     width: 150px;
     border-radius: 50%;
+    /* border: 3px solid blue; */
     background-image: blue;
     padding: 3px;
     margin-bottom: 10px;
@@ -83,4 +96,50 @@ body{
     margin: 0 8px;
     background-color: #4070f4;
     text-decoration: none;
+}
+
+.profile-card .buttons{
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.buttons .button{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    border: none;
+    border-radius: 24px;
+    margin: 0 10px;
+    padding: 8px 24px;
+    background-color: blue;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.buttons .button.hover{
+    background-color: blue;
+}
+
+.profile-card .analytics{
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.analytics .data{
+    display: flex;
+    align-items: center;
+    color: #333;
+    padding: 0 20px;
+    border-radius: 2px solid #e7e7e7;
+}
+.data .i{
+    font-size: 18px;
+    margin-right: 6px;
+}
+
+.data .last-child{
+    border-right: none;
+
 }
